<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".PageAdapter.FragmentPageAdapter">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="226dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        app:layout_constraintBottom_toTopOf="@id/passwordContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameReg"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:hint="@string/username"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textColor="@drawable/textfocuscolor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@id/usernameContainer"
        android:theme="@style/TextLabel"

        app:layout_constraintBottom_toTopOf="@id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameContainer">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordReg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/offWhite"
        android:text="@string/show_password"
        android:textColor="@color/offWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintStart_toStartOf="@+id/passwordContainer"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

    <android.support.v7.widget.CardView
        android:id="@+id/loginbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/passwordContainer"
        android:layout_centerHorizontal="true"

        android:background="@drawable/border"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/registerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textAppearance="@android:style/TextAppearance.Material.Button"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_user"
        android:textColor="@color/offWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

</android.support.constraint.ConstraintLayout>